Implement input generator

--- a/ExternalSort.Generator/ExternalSort.Generator.csproj
+++ b/ExternalSort.Generator/ExternalSort.Generator.csproj
@@ -7,4 +7,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Update="Dictionaries\adjectives.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Dictionaries\nouns.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
