--- a/ExternalSort.Sorter/ExternalSort.Sorter.csproj
+++ b/ExternalSort.Sorter/ExternalSort.Sorter.csproj
@@ -10,6 +10,20 @@
 
     <ItemGroup>
       <PackageReference Include="CliWrap" Version="3.7.1" />
+      <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="9.0.1" />
     </ItemGroup>
+
+    <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('Windows'))">
+        <DefineConstants>OS_WINDOWS</DefineConstants>
+    </PropertyGroup>
+    <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('Linux'))">
+        <DefineConstants>OS_LINUX</DefineConstants>
+    </PropertyGroup>
+    <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('FreeBSD'))">
+        <DefineConstants>OS_FREEBSD</DefineConstants>
+    </PropertyGroup>
+    <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('OSX'))">
+        <DefineConstants>OS_MAC</DefineConstants>
+    </PropertyGroup>
 
 </Project>
